...
                    'https://upm.edu.my/assets/images23/20170406143426UPM-New_FINAL.jpg'),
              ),
            ),
            Container(
              padding: EdgeInsets.only(left: 16.0),
              child: Text(
                'Welcome!',
                style: TextStyle(
                  fontSize: 40,
                  fontWeight: FontWeight.bold,
                ),
              ),
            ),
...
              onPressed: isChecked
                  ? () {
                      widget.onButtonPressed();
                    }
                  : null,
              child: Text(
                'Get Activation Code',
                style: TextStyle(fontSize: 20),
              ),
            ),
          ),
        ],
      ),
...
        children: [
          SizedBox(height: 50),
          SizedBox(
            height: 100,
            width: 300,
            child: Text(
              'Enter the activation code you received via SMS',
              style: TextStyle(fontSize: 20),
            ),
          ),
          SizedBox(height: 20),
          SizedBox(
            height: 60,
...
          Center(
            child: ElevatedButton(
              onPressed: () {
                onButtonPressed();
              },
              child: Text(
                'Activate',
                style: TextStyle(fontSize: 20),
              ),
            ),
          ),
        ],
      ),
...
        ],
      ),
      bottomNavigationBar: BottomNavigationBar(
        items: const <BottomNavigationBarItem>[
          BottomNavigationBarItem(
            icon: Icon(Icons.person),
            label: 'Profile',
          ),
          BottomNavigationBarItem(
            icon: Icon(Icons.home),
            label: 'Home',
          ),
          BottomNavigationBarItem(
            icon: Icon(Icons.settings),
            label: 'Settings',
          ),
        ],
        currentIndex: _selectedIndex,
        onTap: (index) {
          setState(() {
            _selectedIndex = index;
...
                                _phoneNumberController.text);
                            Navigator.of(context).pop();
                            _nameController.clear();
                            _phoneNumberController.clear();
                          }
                        },
                        child: Text('Add'),
                      ),
                    ],
                  ),
                );
              },
              child: Icon(Icons.add),
...
